# r3onboard

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
package/: package.py  package_pi_image.py  product_config.py  products.json
package/debian/: README.debian  changelog  config.ini.default  postinst  prerm  r3onboard.service
package/pi/: Dockerfile  updateImage.sh
r3onboard/: __main__.py  ble_agent_service.py  ble_server.py  network_manager_service.py  remoteit_service.py
tests/: test_ble_server.py  test_network_manager_service.py  test_remoteit_service.py
tests/docker/: Dockerfile
